--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,8 +22,8 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Pull image from docker hub
-        run: docker pull aizharykov/endtermfinal
+        run: docker pull aizharykov/endtermfinal:latest
       - name: Delete old container
         run: docker rm -f endtermfinal-container
       - name: Run docker container
-        run: docker run -d -p 5000:5000 --name endtermfinal-container aizharykov/endtermfinal
+        run: docker run -d -p 5000:5000 --name endtermfinal-container aizharykov/endtermfinal:latest
