--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
       - name: Build docker image
-        run: docker build -t endtermfinal:latest .
+        run: docker build -t aizharykov/endtermfinal:latest .
       - name: Publish image to docker hub
         run: docker push aizharykov/endtermfinal:latest
         
@@ -22,8 +22,8 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Pull image from docker hub
-        run: docker pull endtermfinal:latest
+        run: docker pull aizharykov/endtermfinal:latest
       - name: Delete old container
-        run: docker rm -f endtermfinal-container
+        run: docker rm -f endtermfinal
       - name: Run docker container
         run: docker run -d -p 5000:5000 aizharykov/endtermfinal:latest
